--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,18 @@
-= Doc for everything
+= XBar - MongoDB Style Sharding for \ActiveRecord
+
+== Supported Versions
+
+*Caution* -- only ActiveRecord 3.2.2 and ActiveRecord 4.0.0.beta (commit
+447d87c206ff70046b15be99e73ec79690687bb9) is currently supported.  This 
+will soon be improved.
+
+== General Design
+
+The XBar project is derived from *Octopus*.  Octopus showed that the
+implementation technique of using a proxy for the
+<tt>ActiveRecord::ConnectionAdapters::AbstractAdapter</tt> object instances
+is possible.  This proxy implements a sort of *late binding*,
+returning a real abstract adapter object that depends on the current
+state of the proxy, especially on the value of the `current_shard`.
+Many of the tricky pieces of code, especially those for managing
+associations, come from Octopus.
